{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 258,
  "lineage": "caad7675-88a6-ffda-4445-8ff62cd81391",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05ea593e86cdb9ad8",
            "domain": "vpc",
            "id": "eipalloc-05ea593e86cdb9ad8",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-39-41-168.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.41.168",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Managed_by": "terraform",
              "Name": "gosu-eip"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "gosu-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:471112648881:internet-gateway/igw-0bff85eb4f099d584",
            "id": "igw-0bff85eb4f099d584",
            "owner_id": "471112648881",
            "tags": {
              "Managed_by": "terraform",
              "Name": "gosu-igw"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "gosu-igw"
            },
            "vpc_id": "vpc-0f319fdf2aba35322"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05ea593e86cdb9ad8",
            "connectivity_type": "public",
            "id": "nat-0e3c46a72d8eb9c57",
            "network_interface_id": "eni-0ddf2bd4d64fa9fe8",
            "private_ip": "10.9.0.85",
            "public_ip": "3.39.41.168",
            "subnet_id": "subnet-0158397bf9ff61114",
            "tags": {
              "Managed_by": "terraform",
              "Name": "gosu-nat-gw"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "gosu-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_subnet.public-subnet",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bff85eb4f099d584",
            "id": "r-rtb-0741cc0005dfb1e681080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0741cc0005dfb1e68",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bc5bbd4a9c6fa4301080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e3c46a72d8eb9c57",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bc5bbd4a9c6fa430",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.public-subnet",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:471112648881:route-table/rtb-0bc5bbd4a9c6fa430",
            "id": "rtb-0bc5bbd4a9c6fa430",
            "owner_id": "471112648881",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "gosu-private-rt"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "gosu-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f319fdf2aba35322"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:471112648881:route-table/rtb-0741cc0005dfb1e68",
            "id": "rtb-0741cc0005dfb1e68",
            "owner_id": "471112648881",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "gosu-public-rt"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "gosu-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f319fdf2aba35322"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0657499298f538853",
            "route_table_id": "rtb-0bc5bbd4a9c6fa430",
            "subnet_id": "subnet-0ea1a343b991145a6"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private-subnet",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019aa50ebcc1f6e6a",
            "route_table_id": "rtb-0bc5bbd4a9c6fa430",
            "subnet_id": "subnet-0e21ab1f3d85a8b7d"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private-subnet",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fac0a90c6f1f626c",
            "route_table_id": "rtb-0741cc0005dfb1e68",
            "subnet_id": "subnet-0158397bf9ff61114"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public-subnet",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c1272159d865f04",
            "route_table_id": "rtb-0741cc0005dfb1e68",
            "subnet_id": "subnet-0b035c1911039924b"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public-subnet",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:471112648881:subnet/subnet-0ea1a343b991145a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.9.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea1a343b991145a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112648881",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "private-subnet_1"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "private-subnet_1"
            },
            "vpc_id": "vpc-0f319fdf2aba35322"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:471112648881:subnet/subnet-0e21ab1f3d85a8b7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.9.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e21ab1f3d85a8b7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112648881",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "private-subnet_2"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "private-subnet_2"
            },
            "vpc_id": "vpc-0f319fdf2aba35322"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:471112648881:subnet/subnet-0158397bf9ff61114",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.9.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0158397bf9ff61114",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112648881",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "public-subnet_1"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "public-subnet_1"
            },
            "vpc_id": "vpc-0f319fdf2aba35322"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:471112648881:subnet/subnet-0b035c1911039924b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.9.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b035c1911039924b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112648881",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "public-subnet_2"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "public-subnet_2"
            },
            "vpc_id": "vpc-0f319fdf2aba35322"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:471112648881:vpc/vpc-0f319fdf2aba35322",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.9.0.0/16",
            "default_network_acl_id": "acl-0f32df3f92b1946c4",
            "default_route_table_id": "rtb-0592371f3f412d3fe",
            "default_security_group_id": "sg-0cc5b83b7580f433b",
            "dhcp_options_id": "dopt-0c4d36ccc366d760e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f319fdf2aba35322",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0592371f3f412d3fe",
            "owner_id": "471112648881",
            "tags": {
              "Managed_by": "terraform",
              "Name": "gosu-vpc"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "gosu-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05d2438ca66594916",
            "arn": "arn:aws:ec2:ap-northeast-2:471112648881:instance/i-0de7232e7080694f7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0de7232e7080694f7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f3c5dc786785de0d",
            "private_dns": "ip-10-9-0-110.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.9.0.110",
            "public_dns": "ec2-3-35-173-175.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.173.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0df259ec162bce3ef",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0158397bf9ff61114",
            "tags": {
              "Managed_by": "terraform",
              "Name": "gosu-nginx-1"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "gosu-nginx-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc5b83b7580f433b"
            ]
          },
          "dependencies": [
            "aws_subnet.public-subnet",
            "aws_vpc.this",
            "module.ec2.data.aws_ami.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05d2438ca66594916",
            "arn": "arn:aws:ec2:ap-northeast-2:471112648881:instance/i-0ed8e2d17b7b59822",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ed8e2d17b7b59822",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-067f47dc6068a512d",
            "private_dns": "ip-10-9-1-206.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.9.1.206",
            "public_dns": "ec2-43-201-26-129.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.26.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d4bebde783bf048a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b035c1911039924b",
            "tags": {
              "Managed_by": "terraform",
              "Name": "gosu-nginx-2"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "gosu-nginx-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc5b83b7580f433b"
            ]
          },
          "dependencies": [
            "aws_subnet.public-subnet",
            "aws_vpc.this",
            "module.ec2.data.aws_ami.this"
          ]
        }
      ]
    }
  ]
}